# strava-datastack

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  SETUP.md  future_scope.md  init.sh
extract/: .env.example  .rate_limit_state.json  Makefile  README.md  pyproject.toml  pytest.ini  strava.py
extract/.dlt/: secrets.toml
extract/config/: config.yaml  resources.yaml
extract/scripts/: run_pipeline.sh
extract/src/strava_extract/: __init__.py  __main__.py  pipeline.py  strava_schema_contract.py
extract/tests/: conftest.py
transform/: Claude.md  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
transform/macros/: safe_column.sql  seconds_to_time_display.sql
transform/models/core/: fct_activities.sql  fct_activity_data_points.sql  fct_activity_data_points.yml
transform/models/marts/: _marts__models.yml  dim_strava__segments.sql  fct_activities.sql  fct_activities.yml  fct_strava__activities.sql  fct_strava__activity_data_points.sql  fct_strava__segment_efforts.sql  mart_activities_by_sport.sql  mart_daily_activity_counts.sql  schema.yml
transform/models/reporting/: _reporting__models.yml  rpt_activities_by_sport.sql  rpt_activities_by_sport__sport_type.sql  rpt_activity_daily_trends__sport_type_day.sql  rpt_activity_detail.sql  rpt_activity_detail__activity.sql  rpt_activity_hr_zones.sql  rpt_activity_hr_zones__activity_zone.sql  rpt_activity_list.sql  rpt_activity_list__activity.sql  (+36 more)
transform/tests/: README.md  test_activity_data_consistency.sql  test_stream_data_consistency.sql  test_variable_schema_handling.sql
(+227 files in other folders)
